--- a/less/forum.less
+++ b/less/forum.less
@@ -19,10 +19,15 @@
 }
 
 .TagLabel--toggleable {
-  display: flex;
-  align-items: center;
+  padding: 0;
 
   label {
-    margin-left: 4px;
+    display: flex;
+    align-items: center;
+    padding: 0.1em 0.5em;
+  }
+
+  .BlomstraTagLabel-label {
+    padding-left: 4px;
   }
 }
